welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:69: error: Unmatched closing brace '}' ignored here
 }
 ^